--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -2,29 +2,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: talks
+  name: talks-<ENV>
 spec:
   selector:
     matchLabels:
-      app: talks
+      app: talks-<ENV>
   template:
     metadata:
       labels:
-        app: talks
+        app: talks-<ENV>
     spec:
       containers:
         - name: talks
-          image: myhro/talks:IMAGE_VERSION
+          image: myhro/talks:<VERSION>
           ports:
             - containerPort: 3999
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: talks
+  name: talks-<ENV>
 spec:
   selector:
-    app: talks
+    app: talks-<ENV>
   ports:
     - port: 3999
       targetPort: 3999
@@ -32,18 +32,18 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: talks
+  name: talks-<ENV>
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   rules:
-    - host: talks.myhro.info
+    - host: <HOST>
       http:
         paths:
           - backend:
-              serviceName: talks
+              serviceName: talks-<ENV>
               servicePort: 3999
   tls:
     - hosts:
-        - talks.myhro.info
-      secretName: talks-tls
+        - <HOST>
+      secretName: talks-<ENV>-tls
