--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,13 +37,14 @@ jobs:
       - uses: actions/checkout@v1
       - name: Credentials
         env:
-          ENV: prod
-          HOST: talks.myhro.info
           KUBECTL_CFG: ${{ secrets.KUBECTL_CFG }}
         run: |
           mkdir -p $HOME/.kube
           echo "$KUBECTL_CFG" > $HOME/.kube/config
           kubectl version
       - name: Deploy
+        env:
+          ENV: prod
+          HOST: talks.myhro.info
         run: |
           make deploy
